<package format="2">
  <name>test_publisher</name>
  <version>0.0.1</version>
  <description>Examples of minimal listener</description>
  <maintainer email="x@x.xx"></maintainer>
  <license>x</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>